tests/m1/negative/generic_enum_constructor_mismatch.ax
module generic_enum_constructor_mismatch;

enum Option<T>: u8 {
    none = 0,
    some(T) = 1,
}

fn main() -> i32 {
    let value = Option<i32>.some(true);
    return 0;
}
